--- a/contato.html
+++ b/contato.html
@@ -9,6 +9,9 @@
 <body>
     <ul>
         <li>
+            <a href="index.html">Home</a>
+        </li>
+        <li>
           <a href="https://www.youtube.com/channel/UC6P1lzIVRLlJrWr47p3wqlA">Youtube</a>
         </li>
         <li>
