--- a/index.html
+++ b/index.html
@@ -9,24 +9,31 @@
 <body>
     <ul>
         <li>
+            <a href="index.html">Home</a>
+        </li>
+        <li>
           <a href="https://www.youtube.com/channel/UC6P1lzIVRLlJrWr47p3wqlA">Youtube</a>
         </li>
         <li>
             <a href="contato.html"> Contato</a>
         </li>
     </ul>
-    <h1>Olá Mundo</h1>
+    <h1>Plkeef</h1>
     <p>Mussum Ipsum, cacilds vidis litro abertis. 
         Praesent vel viverra nisi. Mauris aliquet 
         nunc non turpis scelerisque, eget. Nullam 
         volutpat risus nec leo commodo, ut interdum 
         diam laoreet. Sed non consequat odio. Mé faiz
          elementum girarzis, nisi eros vermeio.</p>
-    <img src="https://2.bp.blogspot.com/-NtFStxBs4ks/Vs_HpFRNq-I/AAAAAAAACm8/CsT6ejA5-sk/s1600/Mussum.jpg" 
-    alt="Mussum">
-        <h2>Vídeos</h2>
+    <img src="C:\Users\Positivo\Desktop\BlogPessoal/ab6761610000e5ebc981f4fa62a70b0a54113011.jpg" 
+    alt="Plkeef">
+    <h2>Último vídeo</h2>
     
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/-W7uczsXw4E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/-W7uczsXw4E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    <h2>Ouça a EP - Era dos Drones</h2>
+<iframe src="https://open.spotify.com/embed/album/2nTisOPcMNRzeg7HvNz2Uh" width="100%" height="380" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 </body>
 </html>
+
+
