--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plkeef</title>
+    <link rel="stylesheet" href="C:\Users\Positivo\Desktop\VS CODE WORKSPACE\plkeef/css/style.css">
+
 </head>
 <body>
     <ul>
@@ -27,7 +29,7 @@
          elementum girarzis, nisi eros vermeio.</p>
     <img src="C:\Users\Positivo\Desktop\BlogPessoal/ab6761610000e5ebc981f4fa62a70b0a54113011.jpg" 
     alt="Plkeef">
-    <h2>Último vídeo</h2>
+    <h1>Último vídeo</h2>
     
     <iframe width="560" height="315" src="https://www.youtube.com/embed/-W7uczsXw4E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
