--- a/index.html
+++ b/index.html
@@ -4,36 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plkeef</title>
+    <title>GustaRhymes</title>
+    <link rel="stylesheet" href="C:\Users\Positivo\Desktop\VS CODE WORKSPACE\fundamentos-web/css/style.css">
 </head>
+<ul class="center"> 
+    <li>
+        <a href="index.html">Home</a>
+    </li>
+    <li>
+      <a href="https://github.com/gumunizs">GitHub</a>
+    </li>
+    <li>
+        <a href="contato.html"> Contato</a>
+    </li>
+</ul>
 <body>
-    <ul>
-        <li>
-            <a href="index.html">Home</a>
-        </li>
-        <li>
-          <a href="https://www.youtube.com/channel/UC6P1lzIVRLlJrWr47p3wqlA">Youtube</a>
-        </li>
-        <li>
-            <a href="contato.html"> Contato</a>
-        </li>
-    </ul>
-    <h1>Plkeef</h1>
-    <p>Mussum Ipsum, cacilds vidis litro abertis. 
-        Praesent vel viverra nisi. Mauris aliquet 
-        nunc non turpis scelerisque, eget. Nullam 
-        volutpat risus nec leo commodo, ut interdum 
-        diam laoreet. Sed non consequat odio. Mé faiz
-         elementum girarzis, nisi eros vermeio.</p>
-    <img src="C:\Users\Positivo\Desktop\BlogPessoal/ab6761610000e5ebc981f4fa62a70b0a54113011.jpg" 
-    alt="Plkeef">
-    <h2>Último vídeo</h2>
-    
+    <h1 class="center">Gustavo Muniz</h1>
+
+    <div class="container">
+    <p class="center">
+        Tenho interesse em me desenvolver na área da tecnologia, que está em grande ascensão e constante evolução. Sendo assim, atualmente estou em andamento no curso de Desenvolvedor Java Jr. pela Generation Brasil.
+        Me identifico, também, com a criação de projetos e estratégias para alavancar a exposição da marca e melhorar o clima organizacional, isso influenciou meu Trabalho de Graduação no curso de Gestão Empresarial que teve como tema a Comunicação como estratégia empresarial. </p>
+    </p>
+    </div>
+  
+    <div>
+    <img src="C:\Users\Positivo\Pictures/GUST.png" 
+    alt="Mini Gusta">
+    </div>
+  
+    <h2>Vídeos</h2>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/-W7uczsXw4E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-    <h2>Ouça a EP - Era dos Drones</h2>
-<iframe src="https://open.spotify.com/embed/album/2nTisOPcMNRzeg7HvNz2Uh" width="100%" height="380" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-</body>
+    </body>
 </html>
-
-
