--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   
     <h2>Vídeos</h2>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/-W7uczsXw4E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+    
+    <script src="./js/script.js"></script>
     </body>
 </html>
